fix(nag): overlay nags were always shown
overlay nag were always shown, although a nag should be hidden by default.
While we are at it i slightly adjusted the default background for better readability

--- a/src/definitions/modules/nag.less
+++ b/src/definitions/modules/nag.less
@@ -104,7 +104,6 @@ a.ui.nag {
   .ui.overlay.nags,
   .ui.overlay.nag {
     position: absolute;
-    display: block;
   }
 }
 
